Adicionando detalhes à tela principal

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Generic PetShop</title>
+    <title>Pra Kolorir</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
     <header>
-      <div class="content">
+      <div class="header-content">
         <nav>
-          <p>generic petshop</p>
+          <p>Pra Kolorir</p>
           <ul>
             <li><a href="#link-for-home">Início</i></a></li>
             <li><a href="#link-for-about">Sobre</i></a></li>
-            <a href="#link-for-pagelogin"><button>Login</button></a>
+            <li><a href="#link-for-products">Produtos</i></a></li>
+            <a href="https://www.instagram.com/pra_kolorir01/"><i class='bx bxl-instagram'></i></a>
           </ul>
         </nav>
       </div>
