--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-    <header>
-      <div class="header-content">
-        <nav>
-          <p>Pra Kolorir</p>
-          <ul>
-            <li><a href="#link-for-home">Início</i></a></li>
-            <li><a href="#link-for-about">Sobre</i></a></li>
-            <li><a href="#link-for-products">Produtos</i></a></li>
-            <a href="https://www.instagram.com/pra_kolorir01/"><i class='bx bxl-instagram'></i></a>
-          </ul>
-        </nav>
-      </div>
+    <header class="header-content">
+      <nav class="nav-content">
+        <div></div>
+        <ul class="navbar-list">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">Sobre nós</a></li>
+          <li><a href="#products">Produtos</a></li>
+          <li><a href="#feedback">Feedbacks</a></li>
+          <li><a href="#contatos">Contatos</a></li>
+        </ul>
+        <img src="images/instagram-icon.png" alt="" class="instagram-icon">
+      </nav>
     </header>
+
+    <section id="#home" class="container-home">
+      <div class="tittle-container">
+        <h2>Ateliê</h2>
+        <h1>PRA KOLORIR</h1>
+      </div>
+      <button class="button-home">Saiba mais</button>
+    </section>
   </body>
 </html>
