Adicionado novas telas: Product e about

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
+    <!-- NAVBAR -->
     <header class="header-content">
       <nav class="nav-content">
         <div></div>
@@ -23,12 +24,85 @@
       </nav>
     </header>
 
+    <!-- TELA - HOME -->
     <section id="#home" class="container-home">
       <div class="tittle-container">
         <h2>Ateliê</h2>
         <h1>PRA KOLORIR</h1>
       </div>
       <button class="button-home">Saiba mais</button>
+    </section>
+
+    <!-- TELA - ABOUT -->
+    <section id="about" class="container-about">
+      <div class="box-about">
+        <div class="about-box-img">
+          <!-- IMAGEM -->
+        </div>
+        <div class="about-box-form">
+          <h3 class="title-about">Sobre nós</h3>
+          <div class="form-align">
+            <p>Bem-vindo ao Pra Kolorir, onde a arte encontra 
+              terapia, e a magia da pintura transforma vidas! Descubra 
+              conosco os benefícios únicos dessa prática, desde 
+              ampliar a criatividade até promover a concentração.
+              <br><br>
+              Aqui, pintar é mais do que uma atividade - é uma 
+              jornada de expressão, aprendizado e conexão. 
+              Pintar é algo mágico! 💞✨
+            </p>
+            <button class="button-about">Saiba Mais</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section  id="products" class="container-products">
+      <div class="box-products">
+        <h3 class="title-products">Nossos Produtos</h3>
+        <div class="box-products-itens">
+          <!-- AQUI SE ENCONTRA TODOS OS PRODUTOS -->
+          <div class="item">
+            <h4>Título</h4>
+            <div class="item-img"></div>
+            <div class="form-align-product">
+              <p>
+                A história dos três porquinhos contextualiza sentimentos
+                como disciplina, proteção, comprometimento e colaboração.
+                Simbolicamente, proporciona resultado bastante positivo
+                para compreensão e o desenvolvimento humano das crianças.
+              </p>
+            </div>
+          </div>
+
+          <div class="item">
+            <h4>Título</h4>
+            <div class="item-img"></div>
+            <div class="form-align-product">
+              <p>
+                A história dos três porquinhos contextualiza sentimentos
+                como disciplina, proteção, comprometimento e colaboração.
+                Simbolicamente, proporciona resultado bastante positivo
+                para compreensão e o desenvolvimento humano das crianças.
+              </p>
+            </div>
+          </div>
+
+          <div class="item">
+            <h4>Título</h4>
+            <div class="item-img"></div>
+            <div class="form-align-product">
+              <p>
+                A história dos três porquinhos contextualiza sentimentos
+                como disciplina, proteção, comprometimento e colaboração.
+                Simbolicamente, proporciona resultado bastante positivo
+                para compreensão e o desenvolvimento humano das crianças.
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </section>
   </body>
 </html>
