Criando um footer e adicionando os produtos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="#feedback">Feedbacks</a></li>
           <li><a href="#contatos">Contatos</a></li>
         </ul>
-        <img src="images/instagram-icon.png" alt="" class="instagram-icon">
+        <a href="https://www.instagram.com/pra_kolorir01"> <img src="images/instagram-icon.png" alt="" class="instagram-icon"></a>
       </nav>
     </header>
 
@@ -37,7 +37,6 @@
     <section id="about" class="container-about">
       <div class="box-about">
         <div class="about-box-img">
-          <!-- IMAGEM -->
         </div>
         <div class="about-box-form">
           <h3 class="title-about">Sobre nós</h3>
@@ -57,52 +56,96 @@
       </div>
     </section>
 
-    <section  id="products" class="container-products">
-      <div class="box-products">
-        <h3 class="title-products">Nossos Produtos</h3>
-        <div class="box-products-itens">
-          <!-- AQUI SE ENCONTRA TODOS OS PRODUTOS -->
-          <div class="item">
-            <h4>Título</h4>
-            <div class="item-img"></div>
-            <div class="form-align-product">
-              <p>
-                A história dos três porquinhos contextualiza sentimentos
-                como disciplina, proteção, comprometimento e colaboração.
-                Simbolicamente, proporciona resultado bastante positivo
-                para compreensão e o desenvolvimento humano das crianças.
-              </p>
-            </div>
+    <section  id="products" class="container-products">   
+      <div class="card-wrapper">
+        <div class="card-item">
+          <img src="/images/kit-natal.jpg" alt="kit natalino" />
+          <div class="card-content">
+            <h3>Kit Natalino</h3>
+            <p>
+              Viva o espírito natalino! Pinte com o Papai Noel e companhia!
+            </p>
           </div>
-
-          <div class="item">
-            <h4>Título</h4>
-            <div class="item-img"></div>
-            <div class="form-align-product">
-              <p>
-                A história dos três porquinhos contextualiza sentimentos
-                como disciplina, proteção, comprometimento e colaboração.
-                Simbolicamente, proporciona resultado bastante positivo
-                para compreensão e o desenvolvimento humano das crianças.
-              </p>
-            </div>
-          </div>
-
-          <div class="item">
-            <h4>Título</h4>
-            <div class="item-img"></div>
-            <div class="form-align-product">
-              <p>
-                A história dos três porquinhos contextualiza sentimentos
-                como disciplina, proteção, comprometimento e colaboração.
-                Simbolicamente, proporciona resultado bastante positivo
-                para compreensão e o desenvolvimento humano das crianças.
-              </p>
-            </div>
-          </div>
-
         </div>
+        <div class="card-item">
+          <img src="/images/kit-3pq.jpg" alt="kit os três porquinhos" />
+          <div class="card-content">
+            <h3>Kit Os Três Porquinhos</h3>
+            <p>
+              Adquira já o seu kit e divirta-se com os Três Porquinhos!
+            </p>
+          </div>
+        </div> 
+        <div class="card-item">
+          <img src="/images/kit-santos.jpg" alt="kit religioso"/>
+          <div class="card-content">
+            <h3>Kit Religioso</h3>
+            <p>
+              Pintar é algo transformador e que ilumina a alma.
+            </p>
+          </div>
+        </div> 
+        <div class="card-item">
+          <img src="/images/kit-patcan.jpg" alt="kit patrulha canina" />
+          <div class="card-content">
+            <h3>Kit Patrulha Canina</h3>
+            <p>
+              Se divirta pintando com Marshall, Skye, Chase, Rubble, Rocky e Zuma!  
+            </p>
+          </div>
+        </div> 
+        <div class="card-item">
+          <img src="/images/kit-natal2.jpg" alt="kit natalino 2" />
+          <div class="card-content">
+            <h3>Kit Natalino</h3>
+            <p>
+              Aproveite o Natal com o Papai Noel e suas renas e divirta-se!
+            </p>
+          </div>
+        </div> 
+        <div class="card-item">
+          <img src="/images/kit-monstrossa.jpg" alt="kit monstros SA" />
+          <div class="card-content">
+            <h3>Kit Monstros SA</h3>
+            <p>
+              Pinte com vários bichinhos diferentes, incluindo Mike e Sullivan.
+            </p>
+          </div>
+        </div> 
       </div>
     </section>
+    <footer>
+      <div class="main">
+        <div class="content footer-links">
+          <div class="footer-prakolorir">
+            <h4>Ateliê Pra Kolorir</h4>
+            <p>• Excelência no aprendizado e terapia<br>para <strong>TODAS AS IDADES!</strong>.</p><br>
+            <p>• Pintar é algo <strong>MÁGICO!</strong></p><br>
+            <p>• Aceitamos cartões</p><br>
+            <p>• Fazemos entregas</p>
+          </div>
+          <div class="footer-social">
+            <h4>Entre em contato através das redes sociais!</h4>
+            <div class="social-icons">
+              <a href="https://www.instagram.com/pra_kolorir01">
+                <i class='bx bxl-instagram'></i>
+                <p>Instagram</p>
+              </a>
+            </div>
+            <div>
+              <a href="https://l.instagram.com/?u=https%3A%2F%2Fabre.ai%2Fpecasseuskitsaqui&e=AT2NDyYtlksfrergWJa6awSQh3BtIL2WSOcL5r9iYNU0oqe0i64rjUzSbc1gvwnFkQPA8cCT6C9Zztu21v3GZJyByi7L5ILi1anUNg">
+                <i class='bx bxl-whatsapp' ></i>
+                <p>WhatsApp</p>
+              </a>
+            </div>
+          </div>
+          <div class="footer-contato">
+            <h4>Encontre-nos!</h4>
+            <p>• +55 (81) 99576-9843</p><br>
+            <p>• Recife, PE (Brasil)</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
